--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -1,11 +1,23 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
 
-    <style name="Theme.MishappAwarenessApp" parent="Theme.Material3.DayNight.NoActionBar">
+    <!-- Main App Theme -->
+    <style name="Theme.MishappAwarenessApp"
+        parent="Theme.Material3.DayNight.NoActionBar">
         <item name="colorPrimary">@android:color/holo_blue_light</item>
         <item name="colorSecondary">@android:color/holo_blue_dark</item>
         <item name="android:statusBarColor">?attr/colorPrimary</item>
         <item name="android:navigationBarColor">?attr/colorPrimary</item>
+    </style>
+
+    <style name="Widget.App.BottomAppBar"
+        parent="Widget.Material3.BottomAppBar">
+        <item name="materialThemeOverlay">@style/ThemeOverlay.App.BottomAppBar</item>
+    </style>
+
+    <style name="ThemeOverlay.App.BottomAppBar"
+        parent="ThemeOverlay.Material3.BottomAppBar">
+        <item name="colorSurface">@android:color/white</item>
     </style>
 
 </resources>
